# rtyping

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.agent-hooks/: dispatcher.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/hooks/: hooks.json
.github/workflows/: release.yml  release_qemu.yml  release_qemu.yml.old  test.yml  version-check.yml
docs/: DESIGN.md  DesignDoc-ja.md  HELP.md  PLAN.md  REQUIREMENTS.md  SPECIFICATIONS.md  TODO.md
docs/ADR/: 202604051010.md  202604051106.md  202604052001.md  202604092148.md  202604092238.md  202604092300.md  202604100823.md  202604100858.md  202604100915.md  202604121453.md  202604131215.md  202604131339.md  202604131408.md  202604241345.md  202605071713.md  202605081621.md  202605081957.md  202605082021.md  202605082032.md  202605082059.md  202605090932.md  202605091746.md  202605092000.md  202605261058.md  202605270819.md
docs/TASK/: 202604052001.md  202604092238.md  202604092242.md  202604100915.md  202604131215.md  202604131340.md  202604131408.md  202604241345.md  202605082021.md  202605082032.md  202605090932.md  202605261058.md  current-task.md
src/: config.rs  main.rs  main_old.rs
src/config/: crypto.rs  history_storage.rs  mod.rs  paths.rs  storage.rs  tests.rs
src/domain/: config.rs  entity.rs  history.rs  mod.rs  rhythm.rs  sample.txt
src/presentation/: bgm.rs  bgm_handler.rs  cli.rs  intro.rs  mod.rs  sentence_handler.rs  timer_handler.rs
src/presentation/ui/: app.rs  mod.rs  render.rs  ui_handler.rs
src/presentation/ui/app/: config_editor.rs  menu.rs  mod.rs  typing.rs
src/presentation/ui/render/: common.rs  config_screen.rs  history_summary.rs  loading.rs  menu.rs  mod.rs  result.rs  rhythm.rs  stats.rs  typing.rs  wpm_graph.rs
src/runtime/: mod.rs  session.rs  timer.rs
src/runtime/input/: config_screen.rs  menu.rs  mod.rs  stats.rs
src/runtime/input/gameplay/: generation.rs  loading.rs  mod.rs  result.rs  (+2 more)
src/usecase/: accuracy.rs  generate_sentence.rs  history_stats.rs  mod.rs  wpm.rs
src/usecase/generate_sentence/: local.rs  mod.rs  normalize.rs  providers.rs
