[package]
name = "rtyping"
version = "1.0.17"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.10.0"
rodio = "0.22.2"
clap = "4.6"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
base64 = "0.22"
sha2 = "0.11.0"

[[bin]]
name = "rtyping"
path = "src/main.rs"
