[package]
name = "rtyping"
version = "1.0.20"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.10.1"
rodio = "0.22.2"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
base64 = "0.22"
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
ring = "0.17.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"
indexing_slicing = "deny"

[[bin]]
name = "rtyping"
path = "src/main.rs"
